* 2012-08-01 - jan.bauerdick@open-xchange.com

 - New implementation of sessionstorageservice, storing sessions with cassandra

* 2012-01-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 22681: Fixed SQL statement

* 2012-07-31 - marcus.klein@open-xchange.com

 - Fix for bug 22433: Removed obsolete property writeOnly from configuration file configdb.properties.

* 2012-07-30 - martin.herfurth@open-xchange.com

 - Fix for bug 22339: Fixed NullPointerException.

* 2012-07-30 - thorben.betten@open-xchange.com

 - Fix for bug 22536: Introduced custom JavaMail property "mail.imap.failOnNOFetch":
                      If an issued FETCH command is acknowledged with a "NO" response code, an appropriate CommandFailedException is thrown
 - Fix for bug 22608: Fixed MIME structure of saved draft message
 - Fix for bug 22579: Fixed MIME structure of saved draft message
 - Fix for bug 22548: Fixed MIME structure of saved draft message
 - Fix for bug 21839: Fixed MIME structure of saved draft message

* 2012-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 22689: Provide empty default alarms

* 2012-07-28 - thorben.betten@open-xchange.com

 - Fix for bug 22685: Increased timeout to 10sec
 - Fix for bug 22613: Insert line-break as separator
 - Fix for bug 22659: using proper monitor object

* 2012-07-27 - jan.bauerdick@open-xchange.com

 - New implementation of sessionstorageservice, storing sessions with cassandra

* 2012-07-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 22686: Set content-type in PROPPATCH multistatus responses 

* 2012-07-25 - thorben.betten@open-xchange.com

 - Fix for bug 22674: Deal with image-surrounding plain text
 - Fix for bug 22612: Proper "Set-Cookie" handling for IE <= v8.0

* 2012-07-24 - thorben.betten@open-xchange.com

 - Fix for bug 22630 and 22629: Introduced possibility to pass "client" URL parameter which is then accepted as client identifier

* 2012-07-23 - thorben.betten@open-xchange.com
