@@ -461,5 +461,8 @@ public final class InternalList {
         // Another attempt: Adds 'organizerId', 'principal' and 'principalId' to prg_dates and del_dates
         new com.openexchange.groupware.update.tasks.AppointmentAddOrganizerIdPrincipalPrincipalIdColumnsTask2(),
 
+        // Add UIDs to appointments if missing.
+        new com.openexchange.groupware.update.tasks.CalendarAddUIDValueTask(),
+
     };
 }
