@@ -4,6 +4,7 @@
 
 * 2012-01-08 - tobias.friedrich@open-xchange.com
 
+ - Fix for bug 21422: Add UIDs to appointment when missing
  - Fix for bug 22681: Fixed SQL statement
 
 * 2012-07-31 - marcus.klein@open-xchange.com
